[package]
name = "shaded"
version = "0.1.0"
authors = ["Linus Heckemann <git@sphalerite.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.2.0"
bufstream = "0.1.4"

[[bin]]
name = "shaded"
path = "shaded.rs"
